--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,13 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications & Working Papers"
-    url: /publications/
-    
   - title: "CV"
     url: /cv/
+  
+  - title: "Publications and Working Papers"
+    url: /publications/
+    
+  
     
   # - title: "CV"
   #   url: /cv-json/
