--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Assistant Professor of Environmental Economics and Policy at Peking University"
   location         : "China Beijing"
-  employer         : 
+  employer         : "Peking University"
   uri              : "http://scholar.pku.edu.cn/yjin/bio"
   email            : "jin.yana@pku.edu.cn" 
 
