--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,13 +8,13 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #  url: /cv/
    
   
     
   
     
-  # - title: "CV"
-  #   url: /cv-json/
+   - title: "CV"
+     url: /cv-json/
 
