--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Yana JIN"
 description              : &description "Assistant Professor of Environmental Economics and Policy at Peking University"
 url                      : https://cerulean23y.github.io/yanajin.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "http://scholar.pku.edu.cn/yjin/bio" # the subpath of your site, e.g. "/blog"
 repository               : "Cerulean23Y/yanajin.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -31,7 +31,7 @@ author:
   email            : "jin.yana@pku.edu.cn" 
 
   # Academic websites
-  arxiv            : "http://scholar.pku.edu.cn/yjin/bio"
+  arxiv            : #"http://scholar.pku.edu.cn/yjin/bio"
   googlescholar    : "https://bit.ly/32Oh18g"
   impactstory      : # URL
   orcid            : # URL
